Changelog
=========

2.1.13 (unreleased)
-------------------

- Use the link_target attribute (e.g. ``_target``) of user actions in
  the personal bar, if set.
  Fixes http://dev.plone.org/ticket/11609
  [maurits]

- Added a page as a not-js fallback for the user dropdown menu
  [giacomos]


2.1.12 (2011-11-28)
-------------------

- Fix for a release issue.
  [esteele]


2.1.11 (2011-11-28)
-------------------

- Add the ability for the navtree strategy to suppliment the query.
  Fixes a problem where the listing of default pages in navigation
  trees could no longer be enabled.
  [rossp]

- Added on body a class related to subsite.
  The class is named site-x where x is navigation root object id.
  [thomasdesvenain]

- Treat aliases to the ``(Default)`` view of a content type also as a
  view template (providing IViewView).
  Fixes http://dev.plone.org/plone/ticket/8198
  [maurits]


2.1.10 (2011-09-19)
-------------------

- Fix possible ZCML load order issue by explicitly loading CMF permissions.
  Fixes http://dev.plone.org/plone/ticket/11869
  [davisagli]

- Fix bug where getNavigationRootObject goes into infinite loop if context is 
  None.
  Fixes http://dev.plone.org/plone/ticket/12186
  [anthonygerrard]

2.1.9 (2011-08-31)
------------------

- Accessibility: Added a title and alt tag to the logo.
  This fixes http://dev.plone.org/plone/ticket/11689
  [fulv]

- Switching 'Skip to navigation' to be linked to the global navigation instead
  of the navigation portlet.
  This fixes http://dev.plone.org/plone/ticket/11728
  [spliter]

- Refactor getNavigationRoot to make it simpler, fixing issues when
  relativeRoot is specified.
  [gotcha]

2.1.8 - 2011-07-04
------------------

- Show 'Manage portlets' fallback viewlet for all ILocalPortletAssignables, not
  just ATContentTypes items. This fixes
  http://code.google.com/p/dexterity/issues/detail?id=183
  [davisagli]

2.1.7 - 2011-06-30
------------------
